--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AnirudhJyothula.github.io/Portfolio",
+  "homepage": "https://anirudhjyothula.github.io/Portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
